# fastapi-passkey-auth

./: .env.example  Dockerfile  README.md  alembic.ini  prompts.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 05caef4e6637_add_last_login_to_user.py  3a94a16287bd_default_add_created_at_updated_at_to_.py  70102b19e740_id_for_table_users_and_authenticators_.py  9fecbb2fefb6_id_for_table_users_and_authenticators_.py  be320ef4f473_initial_migration.py  dc32b15d765c_change_last_login_to_last_login_at_to_.py  e96194e7b64d_added_last_used_at_to_authenticators.py
app/: config.py  database.py  dependencies.py  main.py  utils.py
app/api/: auth.py  root.py  user.py
app/models/: auth.py  base.py  user.py
app/schemas/: auth.py  login.py  root.py  token.py  user.py  webauthn.py
app/services/: auth.py  password.py  token.py  user.py  webauthn.py
docs/: fastapi-passkey-auth.xmind
